оформление карточек "сейчас в тренде"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         </ul>
       </nav>
     </div>
-
     <h1>Блог о творчестве, спорте<br> и образе жизни</h1>
   </header>
 
@@ -32,10 +31,48 @@
   <h2 class="hidden">сейчас в тренде</h2>
   <div class="wrapper">
     <img src="images/trend1.jpg" alt="сайт на подоконнике">
+    <div class="trend-content">
+      <ul class="main-post-item">
+        <li><a href="#" class="main-menu-link">LIFESTYLE</a></li>
+        <li><a href="#" class="main-menu-link">INTERIOR</a></li>
+      </ul>
+      <div class="trend-content-link">
+        <a href="#" class="trend-content-link">Сейчас в тренде: сад на подоконнике</a>
+      </div>  
+    </div>
+  
     <img src="images/trend2.jpg" alt="cыры на красивых картинках">
+    <div class="trend-content">
+      <ul class="main-post-item">
+        <li><a href="#" class="main-menu-link">FOOD</a></li>
+      </ul>
+      <div class="trend-content-link">
+        <a href="#" class="trend-content-link">Сыры на красивых картинках из интернета: какие они на вкус?</a>
+      </div>  
+    </div> 
+
     <img src="images/trend3.jpg" alt="поход в горы">
+    <div class="trend-content">
+      <ul class="main-post-item">
+        <li><a href="#" class="main-menu-link">LIFESTYLE</a></li>
+        <li><a href="#" class="main-menu-link">INTERIOR</a></li>
+      </ul>
+      <div class="trend-content-link">
+        <a href="#" class="trend-content-link">Собираемся в первый поход в горы</a>
+      </div>  
+    </div>
+
     <img src="images/trend4.jpg" alt="витамины в лимонах">
-  </div>  
+    <div class="trend-content">
+      <ul class="main-post-item">
+        <li><a href="#" class="main-menu-link">LIFESTYLE</a></li>
+        <li><a href="#" class="main-menu-link">INTERIOR</a></li>
+      </ul>
+      <div class="trend-content-link">
+        <a href="#" class="trend-content-link">Сейчас в тренде: сколько витамина с в лимонах?</a>
+      </div>  
+    </div>
+
 </section>
   <section class="main">
     <hgroup class="main-post">
@@ -79,7 +116,7 @@
 
       <div class="awake">
         <img src="images/last-post3.jpg" aline="left" class="picture" alt="Рокер приветствует людей">
-        <div class="main_post-item">
+        <div class="main-post-item">
           <ul class="main-post-item">
             <li><a href="#" class="main-menu-link">Music</a></li>
           </ul>
@@ -97,7 +134,7 @@
 
       <div class="awake">
         <img src="images/last-post4.jpg" aline="left" class="picture" alt="Накрытый стол для обеда">
-        <div class="main_post-item">
+        <div class="main-post-item">
           <ul class="main-post-item">
             <li><a href="#" class="main-menu-link">LifeStyle</a></li>
             <li><a href="#" class="main-menu-link">FOOD</a></li>
@@ -115,7 +152,7 @@
 
       <div class="awake">
         <img src="images/last-post5.jpg" aline="left" class="picture" alt="Подушка с красивым принтом">
-        <div class="main_post-item">
+        <div class="main-post-item">
           <ul class="main-post-item">
             <li><a href="#" class="main-menu-link">LifeStyle</a></li>
             <li><a href="#" class="main-menu-link">INTERIOR</a></li>
@@ -238,44 +275,44 @@
   <section class="shop">
     <h2 class="hidden">Наши изделия</h2>
       <article class="products">
-        <div class="products_image-1">
+        <div class="products-image-1">
           <img src="images/shop-item-desk1.jpg" alt="Подушки">
-            <div class="products_bordered">
-              <h3 class="products_title">Подушки на диван</h3>
-              <p class="products_description">Набор из двух подушек с модными принтами. Видео о создании <a href="#0">здесь</a></p>
-              <div class="price_items">
+            <div class="products-bordered">
+              <h3 class="products-title">Подушки на диван</h3>
+              <p class="products-description">Набор из двух подушек с модными принтами. Видео о создании <a href="#0">здесь</a></p>
+              <div class="price-items">
                 <button class="cart">В магазин</button>
                 <div class="sale">
-                  <p class="sale_price"><del>1000 Р</del></p>
+                  <p class="sale-price"><del>1000 Р</del></p>
                   <p class="price">800 Р</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-          <div class="products_image-2">
+          <div class="products-image-2">
             <img src="images/shop-item-desk2.jpg" alt="Кукла">
-            <div class="products_bordered">
-              <h3 class="products_title">Кукла "Зайчик"</h3>
-              <p class="products_description">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
-              <div class="price_items">
+            <div class="products-bordered">
+              <h3 class="products-title">Кукла "Зайчик"</h3>
+              <p class="products-description">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a href="#0">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+              <div class="price-items">
                 <button class="cart">В магазин</button>
                 <div class="sale">
-                  <p class="sale_price">1000 Р</p>
+                  <p class="sale-price">1000 Р</p>
                 </div>
               </div>
             </div>
           </div>
       
-          <div class="products_image-3">
+          <div class="products-image-3">
             <img src="images/shop-item-desk3.jpg" alt="Рамка">
-            <div class="products_bordered">
-              <h3 class="products_title">Шестиугольная рамка</h3>
-              <p class="products_description">Необычная рамка для украшения дома из видео<a href="#0"> «как сделать рамку из подручных средств за 30 минут»</a></p>
-              <div class="price_items">
+            <div class="products-bordered">
+              <h3 class="products-title">Шестиугольная рамка</h3>
+              <p class="products-description">Необычная рамка для украшения дома из видео<a href="#0"> «как сделать рамку из подручных средств за 30 минут»</a></p>
+              <div class="price-items">
                 <button class="cart">В магазин</button>
                 <div class="sale">
-                  <p class="sale_price">1000 Р</p>
+                  <p class="sale-price">1000 Р</p>
                 </div>
               </div>
             </div>
